...
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sample_date"
                android:textColor="?attr/colorSecondary" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:elevation="@dimen/color_card_margin"
                android:layout_margin="@dimen/color_card_margin"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <EditText
                android:id="@+id/et_note"
                android:elevation="@dimen/color_card_margin"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/note"
...
