...
    <string name="drawing">Drawing</string>
    <string name="entries">Entries</string>
    <string name="add_notes">Add</string>
    <string name="edit_notes">Edit</string>
    <string name="text_confirm">Confirm</string>
    <string name="are_you_sure">Are you sure to delete this?</string>
    <string name="delete">Delete</string>
    <string name="are_u_sure_move">Are you sure you want to move this ?</string>
    <string name="move">Move</string>
    <string name="welcome_to_firebase_simple_logbook_app_to_use_cloud_storage_accross_multiple_devices_we_suggest_you_to_login_so_that_your_data_is_secure_with_us_and_you_can_use_the_app_on_multiple_devices_otherwise_if_you_dont_want_want_to_use_cloud_storage_you_can_skip_this_and_you_app_data_will_be_accessable_on_this_device_even_if_you_delete_the_app_and_install_in_same_phone_the_data_is_still_
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="sign_in">Sign in</string>
    <string name="loading">Loading...</string>
...
